--- a/_modules/index.html
+++ b/_modules/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Overview: module code &mdash; refnx 0.0.1 documentation</title>
+    <title>Overview: module code &mdash; refnx 0.0.3 documentation</title>
     
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.0.1',
+        VERSION:     '0.0.3',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="refnx 0.0.1 documentation" href="../index.html" />
+    <link rel="top" title="refnx 0.0.3 documentation" href="../index.html" />
    
   
   <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
@@ -46,6 +46,7 @@
 <li><a href="refnx/analysis/reflect.html">refnx.analysis.reflect</a></li>
 <li><a href="refnx/dataset/data1d.html">refnx.dataset.data1d</a></li>
 <li><a href="refnx/dataset/reflectdataset.html">refnx.dataset.reflectdataset</a></li>
+<li><a href="refnx/reduce/batchreduction.html">refnx.reduce.batchreduction</a></li>
 <li><a href="refnx/reduce/bounded_splines.html">refnx.reduce.bounded_splines</a></li>
 <li><a href="refnx/reduce/event.html">refnx.reduce.event</a></li>
 <li><a href="refnx/reduce/parabolic_motion.html">refnx.reduce.parabolic_motion</a></li>
@@ -58,7 +59,6 @@
 <li><a href="refnx/util/general.html">refnx.util.general</a></li>
 <li><a href="refnx/util/nsplice.html">refnx.util.nsplice</a></li>
 <li><a href="refnx/util/quickplot.html">refnx.util.quickplot</a></li>
-<li><a href="time.html">time</a></li>
 </ul>
 
           </div>
