--- a/_modules/refnx/analysis/reflect.html
+++ b/_modules/refnx/analysis/reflect.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>refnx.analysis.reflect &mdash; refnx 0.0.1 documentation</title>
+    <title>refnx.analysis.reflect &mdash; refnx 0.0.3 documentation</title>
     
     <link rel="stylesheet" href="../../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../../',
-        VERSION:     '0.0.1',
+        VERSION:     '0.0.3',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../../_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="refnx 0.0.1 documentation" href="../../../index.html" />
+    <link rel="top" title="refnx 0.0.3 documentation" href="../../../index.html" />
     <link rel="up" title="Module code" href="../../index.html" />
    
   
@@ -62,7 +62,7 @@
 <span class="n">_INTLIMIT</span> <span class="o">=</span> <span class="mf">3.5</span>
 
 
-<div class="viewcode-block" id="convert_coefs_to_layer_format"><a class="viewcode-back" href="../../../refnx.analysis.html#refnx.analysis.reflect.convert_coefs_to_layer_format">[docs]</a><span class="k">def</span> <span class="nf">convert_coefs_to_layer_format</span><span class="p">(</span><span class="n">coefs</span><span class="p">):</span>
+<div class="viewcode-block" id="coefs_to_layer"><a class="viewcode-back" href="../../../refnx.analysis.html#refnx.analysis.reflect.coefs_to_layer">[docs]</a><span class="k">def</span> <span class="nf">coefs_to_layer</span><span class="p">(</span><span class="n">coefs</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Converts &#39;coefs&#39; format array to a &#39;layer&#39; format array .</span>
 <span class="sd">    The &#39;layer&#39; format is used by the `abeles` function, the &#39;coefs&#39; format</span>
@@ -120,7 +120,7 @@
     <span class="k">return</span> <span class="n">layers</span>
 
 </div>
-<div class="viewcode-block" id="convert_layer_format_to_coefs"><a class="viewcode-back" href="../../../refnx.analysis.html#refnx.analysis.reflect.convert_layer_format_to_coefs">[docs]</a><span class="k">def</span> <span class="nf">convert_layer_format_to_coefs</span><span class="p">(</span><span class="n">layers</span><span class="p">,</span> <span class="n">scale</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">bkg</span><span class="o">=</span><span class="mi">0</span><span class="p">):</span>
+<div class="viewcode-block" id="layer_to_coefs"><a class="viewcode-back" href="../../../refnx.analysis.html#refnx.analysis.reflect.layer_to_coefs">[docs]</a><span class="k">def</span> <span class="nf">layer_to_coefs</span><span class="p">(</span><span class="n">layers</span><span class="p">,</span> <span class="n">scale</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">bkg</span><span class="o">=</span><span class="mi">0</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Converts &#39;layer&#39; format array to a &#39;coefs&#39; format array .</span>
 <span class="sd">    The &#39;layer&#39; format is used by the `abeles` function, the &#39;coefs&#39; format</span>
@@ -295,7 +295,7 @@
                          <span class="s">&#39; should be 4 * coefs[0] + 8&#39;</span><span class="p">)</span>
 
     <span class="c"># make into form suitable for reflection calculation</span>
-    <span class="n">w</span> <span class="o">=</span> <span class="n">convert_coefs_to_layer_format</span><span class="p">(</span><span class="n">coefs</span><span class="p">)</span>
+    <span class="n">w</span> <span class="o">=</span> <span class="n">coefs_to_layer</span><span class="p">(</span><span class="n">coefs</span><span class="p">)</span>
 
     <span class="k">if</span> <span class="s">&#39;quad_order&#39;</span> <span class="ow">in</span> <span class="n">kwds</span><span class="p">:</span>
         <span class="n">quad_order</span> <span class="o">=</span> <span class="n">kwds</span><span class="p">[</span><span class="s">&#39;quad_order&#39;</span><span class="p">]</span>
@@ -597,19 +597,19 @@
     <span class="k">return</span> <span class="bp">True</span>
 
 </div>
-<div class="viewcode-block" id="sld_profile"><a class="viewcode-back" href="../../../refnx.analysis.html#refnx.analysis.reflect.sld_profile">[docs]</a><span class="k">def</span> <span class="nf">sld_profile</span><span class="p">(</span><span class="n">coefs</span><span class="p">,</span> <span class="n">z</span><span class="p">):</span>
+<div class="viewcode-block" id="sld_profile"><a class="viewcode-back" href="../../../refnx.analysis.html#refnx.analysis.reflect.sld_profile">[docs]</a><span class="k">def</span> <span class="nf">sld_profile</span><span class="p">(</span><span class="n">z</span><span class="p">,</span> <span class="n">coefs</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Calculates an SLD profile, as a function of distance through the</span>
 <span class="sd">    interface.</span>
 
 <span class="sd">    Parameters</span>
 <span class="sd">    ----------</span>
-<span class="sd">    coefs : np.ndarray</span>
-<span class="sd">        The reflectivity model parameters in &#39;layer&#39; form. (See</span>
-<span class="sd">        `reflectivity`)</span>
 <span class="sd">    z : float</span>
 <span class="sd">        Interfacial distance (Angstrom) measured from interface between the</span>
 <span class="sd">        fronting medium and the first layer.</span>
+<span class="sd">    coefs : np.ndarray</span>
+<span class="sd">        The reflectivity model parameters in &#39;layer&#39; form. (See</span>
+<span class="sd">        `reflectivity`)</span>
 
 <span class="sd">    Returns</span>
 <span class="sd">    -------</span>
@@ -716,6 +716,34 @@
 <span class="sd">        parameters : lmfit.Parameters instance</span>
 <span class="sd">            Contains the parameters that are required for reflectivity</span>
 <span class="sd">            calculation.</span>
+<span class="sd">        kwds[&#39;dqvals&#39;] - float or np.ndarray, optional</span>
+<span class="sd">            If dqvals is a float, then a constant dQ/Q resolution smearing is</span>
+<span class="sd">            employed.  For 5% resolution smearing supply 5.</span>
+<span class="sd">            If `dqvals` is the same shape as q, then the array contains the</span>
+<span class="sd">            FWHM of a Gaussian approximated resolution kernel. Point by point</span>
+<span class="sd">            resolution smearing is employed.  Use this option if dQ/Q varies</span>
+<span class="sd">            across your dataset.</span>
+<span class="sd">            If `dqvals.ndim == q.ndim + 2` and</span>
+<span class="sd">            `q.shape == dqvals[..., -3].shape` then an individual resolution</span>
+<span class="sd">            kernel is applied to each measurement point.  This resolution kernel</span>
+<span class="sd">            is a probability distribution function (PDF). `dqvals` will have the</span>
+<span class="sd">            shape (qvals.shape, M, 2).  There are `M` points in the kernel.</span>
+<span class="sd">            `dqvals[..., 0]` holds the q values for the kernel, `dqvals[..., 1]`</span>
+<span class="sd">            gives the corresponding probability.</span>
+<span class="sd">        kwds[&#39;quad_order&#39;] - int, optional</span>
+<span class="sd">            the order of the Gaussian quadrature polynomial for doing the</span>
+<span class="sd">            resolution smearing. default = 17. Don&#39;t choose less than 13. If</span>
+<span class="sd">            quad_order == &#39;ultimate&#39; then adaptive quadrature is used. Adaptive</span>
+<span class="sd">            quadrature will always work, but takes a _long_ time (2 or 3 orders</span>
+<span class="sd">            of magnitude longer). Fixed quadrature will always take a lot less</span>
+<span class="sd">            time. BUT it won&#39;t necessarily work across all samples. For example,</span>
+<span class="sd">            13 points may be fine for a thin layer, but will be atrocious at</span>
+<span class="sd">            describing a multilayer with bragg peaks.</span>
+<span class="sd">        kwds[&#39;parallel&#39;]: bool, optional</span>
+<span class="sd">            Do you want to calculate in parallel? This option is only</span>
+<span class="sd">            applicable if you are using the ``_creflect`` module. The option is</span>
+<span class="sd">            ignored if using the pure python calculator, ``_reflect``. The</span>
+<span class="sd">            default is `True`.</span>
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
@@ -734,8 +762,9 @@
             <span class="n">kwds</span><span class="p">[</span><span class="s">&#39;parallel&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">parallel</span>
         <span class="n">yvals</span> <span class="o">=</span> <span class="n">reflectivity</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">params</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwds</span><span class="p">)</span>
 
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">transform</span><span class="p">:</span>
-            <span class="n">yvals</span><span class="p">,</span> <span class="n">temp</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">transform</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">yvals</span><span class="p">)</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">transform</span> <span class="ow">or</span> <span class="s">&#39;transform&#39;</span> <span class="ow">in</span> <span class="n">kwds</span><span class="p">:</span>
+            <span class="n">t</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">transform</span> <span class="ow">or</span> <span class="n">kwds</span><span class="p">[</span><span class="s">&#39;transform&#39;</span><span class="p">]</span>
+            <span class="n">yvals</span><span class="p">,</span> <span class="n">temp</span> <span class="o">=</span> <span class="n">t</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">yvals</span><span class="p">)</span>
 
         <span class="k">return</span> <span class="n">yvals</span>
 </div>
@@ -788,10 +817,10 @@
 <span class="sd">            The distance from the top interface and the SLD at that point.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
-        <span class="n">params</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">asfarray</span><span class="p">(</span><span class="n">parameters</span><span class="o">.</span><span class="n">valuesdict</span><span class="p">()</span><span class="o">.</span><span class="n">values</span><span class="p">())</span>
+        <span class="n">params</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">asfarray</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="n">parameters</span><span class="o">.</span><span class="n">valuesdict</span><span class="p">()</span><span class="o">.</span><span class="n">values</span><span class="p">()))</span>
 
         <span class="k">if</span> <span class="n">points</span> <span class="ow">is</span> <span class="ow">not</span> <span class="bp">None</span><span class="p">:</span>
-            <span class="k">return</span> <span class="n">points</span><span class="p">,</span> <span class="n">sld_profile</span><span class="p">(</span><span class="n">params</span><span class="p">,</span> <span class="n">points</span><span class="p">)</span>
+            <span class="k">return</span> <span class="n">points</span><span class="p">,</span> <span class="n">sld_profile</span><span class="p">(</span><span class="n">points</span><span class="p">,</span> <span class="n">params</span><span class="p">)</span>
 
         <span class="k">if</span> <span class="ow">not</span> <span class="nb">int</span><span class="p">(</span><span class="n">params</span><span class="p">[</span><span class="mi">0</span><span class="p">]):</span>
             <span class="n">zstart</span> <span class="o">=</span> <span class="o">-</span><span class="mi">5</span> <span class="o">-</span> <span class="mi">4</span> <span class="o">*</span> <span class="n">np</span><span class="o">.</span><span class="n">fabs</span><span class="p">(</span><span class="n">params</span><span class="p">[</span><span class="mi">7</span><span class="p">])</span>
@@ -808,12 +837,12 @@
 
         <span class="n">points</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">linspace</span><span class="p">(</span><span class="n">zstart</span><span class="p">,</span> <span class="n">zend</span><span class="p">,</span> <span class="n">num</span><span class="o">=</span><span class="mi">500</span><span class="p">)</span>
 
-        <span class="k">return</span> <span class="n">points</span><span class="p">,</span> <span class="n">sld_profile</span><span class="p">(</span><span class="n">params</span><span class="p">,</span> <span class="n">points</span><span class="p">)</span>
+        <span class="k">return</span> <span class="n">points</span><span class="p">,</span> <span class="n">sld_profile</span><span class="p">(</span><span class="n">points</span><span class="p">,</span> <span class="n">params</span><span class="p">)</span>
 </div>
     <span class="nd">@staticmethod</span>
 <div class="viewcode-block" id="ReflectivityFitFunction.parameter_names"><a class="viewcode-back" href="../../../refnx.analysis.html#refnx.analysis.reflect.ReflectivityFitFunction.parameter_names">[docs]</a>    <span class="k">def</span> <span class="nf">parameter_names</span><span class="p">(</span><span class="n">nparams</span><span class="o">=</span><span class="mi">8</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Parameter names for a default reflecitivty calculation</span>
+<span class="sd">        Parameter names for a default reflectivity calculation</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">names</span> <span class="o">=</span> <span class="p">[</span><span class="s">&#39;nlayers&#39;</span><span class="p">,</span> <span class="s">&#39;scale&#39;</span><span class="p">,</span> <span class="s">&#39;SLDfront&#39;</span><span class="p">,</span> <span class="s">&#39;iSLDfront&#39;</span><span class="p">,</span> <span class="s">&#39;SLDback&#39;</span><span class="p">,</span>
                  <span class="s">&#39;iSLDback&#39;</span><span class="p">,</span> <span class="s">&#39;bkg&#39;</span><span class="p">,</span> <span class="s">&#39;sigma_back&#39;</span><span class="p">]</span>
